tests/baselines/reference/functionCall6.errors.txt
tests/cases/compiler/functionCall6.ts(3,5): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
tests/cases/compiler/functionCall6.ts(4,12): error TS2554: Expected 1 arguments, but got 2.
tests/cases/compiler/functionCall6.ts(5,1): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/compiler/functionCall6.ts (3 errors) ====
    function foo(a:string){}; 
    foo('bar');
    foo(2);
        ~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    foo('foo', 'bar');
               ~~~~~
!!! error TS2554: Expected 1 arguments, but got 2.
    foo();
    ~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 tests/cases/compiler/functionCall6.ts:1:14: An argument for 'a' was not provided.
    